<resources>
    <string name="app_name">一个计划</string>

    <string name="registerRecommend1">没有账号？&#160;快&#160;</string>
    <string name="registerRecommendLink">注册</string>
    <string name="registerRecommend2">&#160;吧！</string>

    <string name="text_label_1">任务清单</string>
    <string name="text_label_2">课程表</string>
    <string name="text_label_3">计划</string>
    <string name="text_label_4">专注</string>
    <string name="text_label_5">用户</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="login">登录</string>
    <string name="login_id">手机号</string>
    <string name="login_password">密码</string>

    <string name="register_id">手机号</string>
    <string name="register_password">密码</string>
    <string name="register_repassword">再次输入密码</string>
    <string name="register_email">邮箱</string>
    <string name="register_btn">开始使用</string>
    <string name="register_cancel">取消</string>
    <string name="register_btn_next">下一步</string>
    <string name="register_birth">生日</string>
    <string name="register_submit">提交</string>
    <string name="register_back">返回</string>
    <string name="register_name">昵称</string>
    <string name="add_content">要做什么</string>
    <string name="add_memo">备注</string>
    <string name="add_date">日期</string>
    <string name="add_time">时间</string>
    <string name="level">等级</string>


    <string name="sort_add_time">按添加时间排序</string>
    <string name="sort_date">按提醒时间排序</string>
    <string name="sort_undone">隐藏未完成事件</string>
    <string name="sort_done">隐藏已完成事件</string>
    <string name="sort_prior">按优先级排序</string>
    <string name="skip">不登录使用 ▶</string>
    <string name="finish">完成</string>
    <string name="schedule">课程表</string>
    <string name="select_week">选择周次</string>
    <string name="start_count">开始计时</string>

    <string name="emoji_calendar">📅</string>
    <string name="emoji_time">🕒</string>
    <string name="emoji_level">🌟</string>
    <string name="emoji_week">📆</string>
    <string name="emoji_hello">👋</string>
    <string name="emoji_teacher">🎓</string>
    <string name="emoji_position">📍</string>
    <string name="emoji_course_name">📚</string>
    <string name="emoji_notification">🔔</string>
    <string name="emoji_time_span">⌛</string>
    <string name="emoji_eyes">👀</string>
    <string name="emoji_balloon">🎈</string>
    <string name="emoji_shine">✨</string>
    <string name="emoji_alert">⏰</string>
    <string name="emoji_school">🏫</string>
    <string name="emoji_achievement">🏆</string>
    <string name="emoji_paste_pad">📋</string>
    <string name="emoji_cloud">☁️</string>
    <string name="emoji_person">👤</string>
    <string name="emoji_trash_bin">♻️</string>
    <string name="emoji_box">📦</string>
    <string name="emoji_timer">⌛️</string>
    <string name="emoji_tick_timer">⏱</string>
    <string name="emoji_plan_done">✅</string>
    <string name="emoji_plan_undone">▪️</string>

    <string name="add_todo">添加</string>
    <string name="cancel">取消</string>
    <string name="stop">暂停</string>
    <string name="log_out">登出</string>

    <string name="focus_time">专注</string>
    <string name="my_page_goal">待做</string>
    <string name="my_page_undone">未完成</string>
    <string name="my_page_done">已完成</string>
    <string name="todo_add">添加</string>
    <string name="todo_edit">编辑</string>
    <string name="time_record">计时记录</string>
    <string name="personal_information_modify">个人信息修改</string>
    <string name="notification_modify">通知设置</string>
    <string name="upload_data_to_cloud">上传本地内容到云</string>
    <string name="trash_bin">回收站</string>
    <string name="about">关于</string>
    <string name="emoji_load_data">📲</string>
    <string name="load_data_to_local">下载内容到本地</string>


</resources>