<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/ellipse_1"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="-50dp"
        android:layout_marginEnd="-60dp"
        android:background="@drawable/background_circle"
        android:elevation="2dp" />

    <View
        android:id="@+id/ellipse_2"
        android:layout_width="500dp"
        android:layout_height="500dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-200dp"
        android:layout_marginBottom="-160dp"
        android:background="@drawable/background_circle"
        android:elevation="3dp" />

    <View
        android:id="@+id/ellipse_3"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="120dp"
        android:background="@drawable/background_circle"
        android:elevation="8dp" />


    <RelativeLayout
        android:id="@+id/register_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/background"
        android:elevation="4dp"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        android:padding="20dp">

        <EditText
            android:id="@+id/et_registerId"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:autofillHints="no"
            android:background="@drawable/edittext_select"
            android:cursorVisible="false"
            android:elevation="2dp"
            android:hint="@string/register_id"
            android:inputType="textVisiblePassword|textNoSuggestions"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:textColorHint="#888888" />

        <EditText
            android:id="@+id/et_registerPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/et_registerId"
            android:layout_marginTop="32dp"
            android:autofillHints="no"
            android:background="@drawable/edittext_select"
            android:cursorVisible="false"
            android:elevation="2dp"
            android:hint="@string/register_password"
            android:inputType="textPassword"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:textColorHint="#888888" />

        <EditText
            android:id="@+id/et_registerRepassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/et_registerPassword"
            android:layout_marginTop="8dp"
            android:autofillHints="no"
            android:background="@drawable/edittext_select"
            android:cursorVisible="false"
            android:elevation="2dp"
            android:hint="@string/register_repassword"
            android:inputType="textPassword"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:textColorHint="#888888" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_below="@+id/et_registerRepassword"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:background="@drawable/background_button"
            android:text="@string/register_btn_next"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/btn_register_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_register"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/register_cancel"
            android:textColor="#777777" />
    </RelativeLayout>
</RelativeLayout>