<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/google_grey">

    <View
        android:id="@+id/ellipse_1"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-160dp"
        android:layout_marginTop="-50dp"
        android:background="@drawable/bg_circle"
        android:elevation="2dp" />

    <View
        android:id="@+id/ellipse_2"
        android:layout_width="360dp"
        android:layout_height="360dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-70dp"
        android:layout_marginBottom="-30dp"
        android:background="@drawable/bg_circle"
        android:elevation="3dp" />

    <View
        android:id="@+id/ellipse_3"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_above="@+id/register2_rl"
        android:layout_alignEnd="@+id/register2_rl"
        android:layout_marginEnd="-20dp"
        android:layout_marginBottom="-30dp"
        android:background="@drawable/bg_circle"
        android:elevation="8dp" />

    <RelativeLayout
        android:id="@+id/register2_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/background"
        android:elevation="4dp"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        android:padding="20dp">

        <EditText
            android:id="@+id/et_registerName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="5dp"
            android:autofillHints="no"
            android:background="@drawable/bg_edit_text_select"
            android:cursorVisible="false"
            android:elevation="2dp"
            android:hint="@string/register_name"
            android:inputType="textPersonName"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:textColorHint="#888888" />

        <EditText
            android:id="@+id/et_registerEmail"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/et_registerName"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="28dp"
            android:autofillHints="no"
            android:background="@drawable/bg_edit_text_select"
            android:cursorVisible="false"
            android:elevation="2dp"
            android:hint="@string/register_email"
            android:inputType="textEmailAddress"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:textColorHint="#888888" />


        <EditText
            android:id="@+id/et_registerBirth"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/et_registerEmail"
            android:layout_marginHorizontal="5dp"
            android:autofillHints="no"
            android:background="@drawable/bg_edit_text_select"
            android:clickable="false"
            android:cursorVisible="false"
            android:elevation="2dp"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/register_birth"
            android:inputType="none"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:textColorHint="#888888" />


        <Button
            android:id="@+id/btn_register_submit"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_below="@+id/et_registerBirth"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:background="@drawable/bg_button"
            android:text="@string/register_submit"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/btn_register_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_register_submit"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/register_back"
            android:textColor="#777777" />
    </RelativeLayout>

</RelativeLayout>