<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="-132dp"
        android:layout_marginTop="-80dp">

        <View
            android:layout_width="520dp"
            android:layout_height="520dp"
            android:id="@+id/ellipse_1"
            android:background="@drawable/background_circle"/>

        <TextView
            android:id="@+id/tv_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="40dp"
            android:text="SKIP"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="72dp"
            android:layout_marginRight="72dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_loginUsername"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/edittext_select"
                android:cursorVisible="false"
                android:hint="Username"
                android:inputType="textVisiblePassword|textNoSuggestions"
                android:paddingLeft="16dp"
                android:textColorHint="#333333" />

            <EditText
                android:id="@+id/et_loginPassword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/edittext_select"
                android:cursorVisible="false"
                android:hint="Password"
                android:inputType="textPassword"
                android:paddingLeft="16dp"
                android:textColorHint="#333333" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linear1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="48dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_login"
                android:layout_width="144dp"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/button"
                android:text="Login"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_login"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/registerRecommend1" />

                <TextView
                    android:id="@+id/tv_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:clickable="true"
                    android:text="@string/registerRecommendLink"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/registerRecommend2" />
            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>


</RelativeLayout>
