<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:layout_marginTop="20dp"
    android:background="@color/google_grey">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="10dp"
        android:singleLine="true"
        android:text="时间段"
        android:textStyle="bold"
        android:alpha="0.8"
        android:textSize="13sp" />


    <Button
        android:id="@+id/ib_delete"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/icon_close" />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll_weeks"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_below="@id/tv_item"
        android:background="?android:attr/selectableItemBackground">


        <androidx.emoji2.widget.EmojiButton
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@null"
            android:text="@string/emoji_week"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/et_weeks"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="24dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="周数"
            android:lines="1"
            android:textSize="14sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/ll_weeks"
        android:layout_marginHorizontal="30dp"
        android:alpha="0.5"
        android:background="@color/grey" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll_time"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_below="@id/ll_weeks"
        android:background="?android:attr/selectableItemBackground">


        <androidx.emoji2.widget.EmojiButton
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@null"
            android:text="@string/emoji_time"
            android:textSize="20sp" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/et_time"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="24dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="周一    第1 - 2节"
            android:lines="1"
            android:textSize="14sp"
            app:autoSizeMaxTextSize="14sp"
            app:autoSizeMinTextSize="10sp"
            app:autoSizeStepGranularity="1sp"
            app:autoSizeTextType="uniform" />
    </androidx.appcompat.widget.LinearLayoutCompat>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/ll_time"
        android:layout_marginHorizontal="30dp"
        android:alpha="0.5"
        android:background="@color/grey" />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll_teacher"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_below="@id/ll_time"
        android:background="?android:attr/selectableItemBackground">


        <androidx.emoji2.widget.EmojiButton
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@null"
            android:text="@string/emoji_teacher"
            android:textSize="20sp" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_teacher"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="24dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="授课老师（可不填）"
            android:lines="1"
            android:singleLine="true"
            android:textSize="14sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/ll_teacher"
        android:layout_marginHorizontal="30dp"
        android:alpha="0.5"
        android:background="@color/grey" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll_room"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_below="@id/ll_teacher"
        android:background="?android:attr/selectableItemBackground">

        <androidx.emoji2.widget.EmojiButton
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@null"
            android:text="@string/emoji_position"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_room"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="24dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="上课地点（可不填）"
            android:lines="1"
            android:singleLine="true"
            android:textSize="14sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/ll_room"
        android:layout_marginHorizontal="30dp"
        android:alpha="0.5"
        android:background="@color/grey" />

</RelativeLayout>